--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
 <body>
     <h1>Este es mi sitio de prueba</h1>
     <p>Esto es un ejemplo</p>
+
+    <nav>
+        <ul>
+            <li>Ejemplo 1</li>
+            <li>Ejemplo 1</li>
+            <li>Ejemplo 1</li>
+            <li>Ejemplo 1</li>
+            <li>Ejemplo 1</li>
+            <li>Ejemplo 1</li>
+        </ul>
+    </nav>
     
 </body>
 </html>
