Agregue section a mi pagina

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             <li>Ejemplo 1</li>
         </ul>
     </nav>
+
+    <section>
+        <p>Estoy avanzando en mi pagina web.</p>
+    </section>
     
 </body>
 </html>
