Trabajando con divs

--- a/index.html
+++ b/index.html
@@ -21,9 +21,16 @@
         </ul>
     </nav>
 
-    <section>
-        <p>Estoy avanzando en mi pagina web.</p>
-    </section>
-    
+   
+    <div id="container">
+        <div>
+            <p>Este es mi parrafo</p>
+        </div>
+        <div>
+
+        </div>
+
+    </div>
+
 </body>
 </html>
