agregando estilo a mi sitio web

--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Prueba</title>
+
+    <style>
+        body{
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 16px;
+            width:80%;
+            margin: auto;
+            background: gray;
+        }
+    
+    </style>
 </head>
 <body>
     <h1>Este es mi sitio de prueba</h1>
