--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             width:80%;
             margin: auto;
             background: gray;
+            border: 1px solid blue;
         }
     
     </style>
